# cafe-menus

./: .build.yml  .travis.yml  AUTHORS  NEWS  README  autogen.sh  cafe-menus.pot  configure.ac  index.html  makepot  output_2960ecb01724345bb17bdb83213d0bcc869b89d7  output_3d09e05312fd778066ff406d42cc8e162099b6e1
.tx/: config
2022-04-09-141701-10562-1@9ef4778af075_master/: index.html  report-1e7639.html  report-5fcaed.html  report-864c9a.html  report-a8b25e.html  report-a9c96d.html  report-af28cb.html  report-cb644e.html  report-dbceec.html  report-dc3b76.html  report-f88215.html
2022-04-09-141803-9556-cppcheck@9ef4778af075_master/: 3.html  commitmsg  output_9ef4778af075806a58883b0e11643e5992ac36fb
2022-04-09-143920-10558-1@d19a92e96c41_Wempty-body/: commitmsg  index.html  report-09e7f9.html  report-2b6323.html  report-30215c.html  report-576c9f.html  report-714f95.html  report-7c08ae.html  report-8a3e23.html  report-8e6417.html  report-a61961.html  report-f7be8d.html
2022-04-09-144027-5089-cppcheck@d19a92e96c41_Wempty-body/: 0.html  index.html  output_d19a92e96c410fca5b2f4f52b0bd7e1b2f5bb239
2022-04-09-144446-10562-1@7ffeb6795976_master/: index.html  report-0658d0.html  report-0d6d51.html  report-26bce2.html  report-4932b5.html  report-55a8dd.html  report-5fcd8a.html  report-7f1f10.html  report-8684ad.html  report-a4a5b0.html  report-ad94dd.html
2022-04-09-144549-1556-cppcheck@7ffeb6795976_master/: 1.html  2.html  output_7ffeb679597693e439b15113c11b05d1b3283473  stats.html
2022-06-22-093636-10715-1@976efea2ad13_master/: index.html  output_976efea2ad139404371ae835b07f41c906602c40  report-10f34d.html  report-1d8e1d.html  report-312728.html  report-8c007c.html  report-b70df5.html  report-bbd23f.html  report-cf1563.html  report-d59380.html  report-db9681.html  report-eb525f.html
2022-06-22-094153-10719-1@39baf615fe33_master/: index.html  report-05afc2.html  report-485c86.html  report-612f47.html  report-65e340.html  report-6722d7.html  report-702d6f.html  report-8c5c1e.html  report-96b112.html  report-b89701.html  report-e8d5e6.html
2022-06-22-094314-2467-cppcheck@39baf615fe33_master/: output_39baf615fe33669e35b1dbb8c6e448d42dcb63af
2022-06-22-094751-10722-1@fec0a0b42b23_deprec/: index.html  output_fec0a0b42b23a654a3b3448eaae6ebb73290f6f2  report-092d39.html  report-0bc907.html  report-25b4b6.html  report-499041.html  report-78640e.html  report-7b8b68.html  report-8ffe59.html  report-97a693.html  report-d52929.html  report-ea67aa.html
2022-06-22-094857-3122-cppcheck@fec0a0b42b23_deprec/: 2.html  3.html
2022-06-24-105857-10693-1@d079ffecbc66_master/: index.html  output_d079ffecbc66ef4c5c2f64d8eae60ca1695994ad  report-0a0838.html  report-1ffc5a.html  report-3dab63.html  report-655709.html  report-677d25.html  report-6a610f.html  report-882c5f.html  report-b03768.html  report-b44b66.html  report-c62bbf.html
2022-06-24-110017-0153-cppcheck@d079ffecbc66_master/: 1.html
2022-06-25-123803-10695-1@947d88ab032b_125/: index.html  report-07e459.html  report-287e8b.html  report-46e59f.html  report-4e4b2d.html  report-57eed9.html  report-83fcba.html  report-9b2124.html  report-ad2f7a.html  report-e7d633.html  report-ed6eae.html
2022-06-25-123809-10698-1@b5f2c45ddcd8_125/: index.html  output_b5f2c45ddcd86b9dacf4846edecfad558d5329ab  report-268c41.html  report-26ae05.html  report-2cf800.html  report-341173.html  report-5115b5.html  report-5f83ad.html  report-69d66a.html  report-761f37.html  report-c979fc.html  report-d8d8df.html
desktop-directories/: Makefile.am
layout/: Makefile.am  (+3 more)
libmenu/: Makefile.am  cafemenu-tree.c  cafemenu-tree.h  desktop-entries.c  entry-directories.c  libcafe-menu-uninstalled.pc.in  libcafe-menu.pc.in  menu-layout.c  menu-monitor.c  menu-monitor.h
util/: Makefile.am  cafe-menus-ls.py  test-menu-spec.c
(+329 files in other folders)
